--- a/products.html
+++ b/products.html
@@ -145,6 +145,9 @@
     <div class="container">
       <p>&copy; 2021 Comfy Couch, Inc. All rights reserved.</p>
     </div>
+    <i class="fab fa-facebook-square"></i>
+    <i class="fab fa-instagram-square"></i>
+    <i class="fab fa-youtube-square"></i>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
