Added the header font family

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="css/style.css" rel="stylesheet"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Open+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Ovo&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" rel="stylesheet">
     
     
@@ -59,7 +59,7 @@
             <div class="col-12 col-lg-7 seasonal">
               <div class="seasonal__pic">
                 <div class="seasonal__text">
-                  <p>Get comfy with these fall decorations</p>
+                  <p>Our fall decor</p>
                   <div class="button">Show me</div>
                 </div>
               </div>
@@ -95,6 +95,7 @@
                     <div class="price__discount">Price</div>
                     <div class="price__original">Full price</div>
                   </div>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
               </div>
             </div>
@@ -115,6 +116,7 @@
                     <div class="price__discount">Price</div>
                     <div class="price__original">Full price</div>
                   </div>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
               </div>
             </div>
@@ -135,6 +137,7 @@
                     <div class="price__discount">Price</div>
                     <div class="price__original">Full price</div>
                   </div>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
               </div>
             </div>
@@ -154,6 +157,7 @@
                     <div class="price__discount">Price</div>
                     <div class="price__original">Full price</div>
                   </div>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
               </div>
             </div>
