--- a/products.html
+++ b/products.html
@@ -9,8 +9,7 @@
   <link href="css/style.css" rel="stylesheet" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Open+Sans&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Ovo&display=swap" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" rel="stylesheet">
 
 </head>
@@ -63,8 +62,8 @@
         <div class="col-12 intro">
           <div class="intro__pic">
             <div class="intro__text">
-              <p>HOME DECOR</p>
-              <p class="intro__categories">Kitchen, lounge and bedroom</p>
+              <p>Home decor</p>
+              <p class="intro__categories">Kitchen, lounge & bedroom</p>
             </div>
           </div>
         </div>
@@ -91,6 +90,7 @@
                 <div class="price">
                   <div class="price__current">Price</div>
                 </div>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
             </div>
           </div>
@@ -113,6 +113,7 @@
                 <div class="price">
                   <div class="price__current">Price</div>
                 </div>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
             </div>
           </div>
@@ -134,6 +135,7 @@
                 <div class="price">
                   <div class="price__current">Price</div>
                 </div>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
             </div>
           </div>
