added new intro picture on index page

--- a/index.html
+++ b/index.html
@@ -55,7 +55,20 @@
       </nav>
 
       <main>
+
+        <div class="col-12 intro" id="intro">
+          <div class="intro__homepic">
+            <div class="intro__text">
+              <p class="intro__header">New lounge sofas</p>
+              <div class="button">Show me</div>
+            </div>
+          </div>
+        </div>
+
+        
+
         <div class="container">
+          <hr>
           <div class="row align-items-start cont">
             <div class="col-12 col-lg-7 seasonal">
               <div class="seasonal__pic">
