--- a/products.html
+++ b/products.html
@@ -43,7 +43,7 @@
             </li>
 
           </ul>
-          <a class="navbar-brand d-none d-lg-block" href="/"><img src="images/comfy-logo-gold2.png"
+          <a class="navbar-brand d-none d-lg-block" href="/"><img src="images/comfy-logo.png"
               id="navbar-brand__logo" alt="comfy couch logo"></a>
           <div class="d-flex justify-content-between form-container">
             <form class="d-flex">
@@ -51,7 +51,7 @@
               <button class="btn btn-primary" type="submit">Search</button>
             </form>
             <img src="images/heart-black.png" id="favorite"/>
-            <img src="images/basket-black.png" id="basket"/>
+            <img src="images/basket-black2.png" id="basket"/>
             <i class="fas fa-user" id="user"></i>
           </div>
         </div>
@@ -63,8 +63,9 @@
         <div class="col-12 intro">
           <div class="intro__pic">
             <div class="intro__text">
-              <p>Home decor</p>
-              <p class="intro__categories">Kitchen, lounge & bedroom</p>
+              <h1 class="intro__decor">Home decor</h1>
+              <h2 class="intro__categories">Kitchen, lounge & bedroom</h2>
+              <p class="lorem">Here you can find all sorts of decor for your home. Whether you like lots of colors or just want simplicity, this is the place. </p>
             </div>
           </div>
         </div>
@@ -79,7 +80,7 @@
               <div class="product-pic">
                 <img src="images/kitchen-saltnpepper.jpg" class="card-img-top" alt="chair on sale">
                 <img src="images/heart.png" class="product-pic__heart"></img>
-                <img src="images/basket.png" class="product-pic__basket"></img>
+                <img src="images/basket2.png" class="product-pic__basket"></img>
               </div>
               <div class="card-body">
 
@@ -101,7 +102,7 @@
                 <img src="images/lounge-chair.jpg" class="card-img-top" alt="chair on sale">
                 
                 <img src="images/heart.png" class="product-pic__heart"></img>
-                <img src="images/basket.png" class="product-pic__basket"></img>
+                <img src="images/basket2.png" class="product-pic__basket"></img>
 
               </div>
               <div class="card-body">
@@ -124,7 +125,7 @@
                 <img src="images/bedroom-linen.jpg" class="card-img-top" alt="chair on sale">
                
                 <img src="images/heart.png" class="product-pic__heart"></img>
-                <img src="images/basket.png" class="product-pic__basket"></img>
+                <img src="images/basket2.png" class="product-pic__basket"></img>
               </div>
               <div class="card-body">
 
